<layout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="testgame.ui.main.fight.FightFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="testgame.ui.main.clicker.ClickerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuidelineForPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuidelineForPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <TextView
            android:id="@+id/noInternetConnectionTextView"
            style="@style/textView.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/no_internet_connection"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tapInstractionTextView"
            style="@style/textView.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tap_on_a_donkey_to_earn_some_scores"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/noInternetConnectionTextView"
            app:layout_constraintStart_toStartOf="@+id/noInternetConnectionTextView"
            app:layout_constraintTop_toBottomOf="@+id/noInternetConnectionTextView" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/clicker_image"
            android:onClick="@{() -> viewModel.increaseScore()}"
            android:src="@drawable/osel"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuidelineForPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topGuidelineForPicture">

        </ImageView>

        <TextView
            android:id="@+id/scoreHeaderTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/score"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/scoreTextView"
            app:layout_constraintEnd_toStartOf="@+id/scoreTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/scoreTextView" />

        <TextView
            android:id="@+id/scoreTextView"
            style="@style/textView.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@={viewModel.score}"
            app:autoSizeTextType="uniform"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/enterGameActivity"
            app:layout_constraintEnd_toEndOf="@+id/image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/scoreHeaderTextView"
            app:layout_constraintTop_toTopOf="@+id/bottomGuidelineForPicture"
            tools:text="179000" />

        <Button
            android:id="@+id/enterGameActivity"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> viewModel.onStartMainActivityClicked()}"
            android:text="@string/try_to_open_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>