<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="testgame.ui.entrance.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            android:layout_width="275dp"
            android:layout_height="58dp"
            android:layout_marginTop="84dp"
            style="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:text="@={viewModel.username}"
                style="@style/textView.Entrance"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@+id/usernameInputLayout"
                app:layout_constraintStart_toStartOf="@+id/usernameInputLayout"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="275dp"
            android:layout_height="58dp"
            android:layout_marginTop="40dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/usernameInputLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/usernameInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="@={viewModel.password}"
                style="@style/textView.Entrance"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@+id/usernameInputLayout"
                app:layout_constraintStart_toStartOf="@+id/usernameInputLayout"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/log_in"
            style="@style/button.Entrance"
            app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
            android:onClick="@{() -> viewModel.logIn()}"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@style/button.Entrance"
            tools:text="Регистрация"
            app:layout_constraintBaseline_toBaselineOf="@+id/logInButton"
            app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
            android:onClick="@{() -> viewModel.signUp()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>